feat(jwt && hashed password)
