# internal/transport/http/auth/routes.go
@@ -1,0 +1,7 @@
+package auth
+
+import "github.com/gin-gonic/gin"
+
+func RegisterRoutes(r *gin.RouterGroup, h *Handler) {
+	r.POST("/login", h.Login)
+}
